[package]
name = "riptide-persistence"
version = "0.9.0"
edition = "2021"
license = "Apache-2.0"
authors = ["RipTide Team"]
description = "Advanced persistence layer for RipTide with Redis/DragonflyDB backend, multi-tenancy, and state management"

[dependencies]
# Domain types
riptide-types = { path = "../riptide-types" }

anyhow = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
redis = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
sha2 = "0.10"
dashmap = { workspace = true }
once_cell = "1.0"
parking_lot = "0.12"
notify = "6.0"
blake3 = "1.5"
lz4_flex = { version = "0.11", optional = true }
zstd = { version = "0.13", optional = true }
crc32fast = "1.4"

# PostgreSQL support for Repository and Transaction adapters
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "json", "chrono", "uuid"], optional = true }

# For configuration hot-reload
serde_yaml = "0.9"

# For metrics and monitoring
prometheus = { version = "0.14", features = ["process"], optional = true }  # Updated to fix protobuf RUSTSEC-2024-0437

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"
tracing-subscriber = "0.3"
fastrand = "2.0"

[features]
default = ["compression", "metrics"]
compression = ["dep:lz4_flex", "dep:zstd"]
metrics = ["dep:prometheus"]
postgres = ["dep:sqlx"]

[[bench]]
name = "persistence_benchmarks"
harness = false
required-features = ["compression"]