[package]
name = "riptide-pipeline"
version = "0.9.0"
edition = "2021"
license = "Apache-2.0"
authors = ["RipTide Team"]
description = "Pipeline orchestrator for RipTide extraction system"

[lib]
name = "riptide_pipeline"
path = "src/lib.rs"

[dependencies]
# Core dependencies
anyhow = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }

# Redis for caching
redis = { workspace = true }

# RipTide dependencies
riptide-types = { path = "../riptide-types" }
riptide-cache = { path = "../riptide-cache" }
riptide-events = { path = "../riptide-events" }
riptide-fetch = { path = "../riptide-fetch", optional = true }
riptide-pdf = { path = "../riptide-pdf", features = ["pdf"] }
riptide-reliability = { path = "../riptide-reliability", features = ["reliability-patterns"] }
riptide-extraction = { path = "../riptide-extraction", default-features = false, features = ["css-extraction", "regex-extraction", "dom-utils", "chunking"], optional = true }
riptide-intelligence = { path = "../riptide-intelligence", optional = true }

[dev-dependencies]
mockall = "0.13"
tempfile = { workspace = true }
tokio-test = "0.4"

[features]
default = ["fetch", "extraction"]
fetch = ["dep:riptide-fetch"]
extraction = ["dep:riptide-extraction"]
llm = ["dep:riptide-intelligence"]
full = ["fetch", "extraction", "llm"]
