[package]
name = "riptide-pool"
version = "0.5.0"
edition = "2021"
license = "Apache-2.0"
authors = ["RipTide Team"]

[dependencies]
# Core riptide dependencies
riptide-types = { path = "../riptide-types" }
riptide-events = { path = "../riptide-events" }
riptide-extraction = { path = "../riptide-extraction", optional = true }

# Workspace dependencies
anyhow = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
# Phase 1: WASM Optional - Make wasmtime optional
wasmtime = { workspace = true, optional = true }
scraper = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
# Phase 1: WASM Optional - wasmtime-wasi for dev/tests
wasmtime-wasi = { workspace = true }
wasmtime = { workspace = true }
# Testing and benchmarking dependencies
criterion = { version = "0.5", features = ["async_tokio"] }
futures = "0.3"

[[bench]]
name = "native_pool_bench"
harness = false

[features]
default = ["native-pool"]
# Phase 1: WASM Optional - New feature flag for WASM pool management
wasm-pool = ["dep:wasmtime", "dep:riptide-extraction", "riptide-extraction/wasm-extractor"]
# Native extraction pooling (CSS and Regex extractors)
native-pool = ["dep:riptide-extraction"]
