[package]
name = "riptide-py"
version = "1.0.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Python bindings for Riptide web scraping framework"

[lib]
name = "riptide"
crate-type = ["cdylib"]

[dependencies]
# Internal dependencies
riptide-facade = { path = "../riptide-facade" }
riptide-types = { path = "../riptide-types" }
riptide-api = { path = "../riptide-api" }

# PyO3 for Python bindings
pyo3 = { version = "0.20", features = ["extension-module", "abi3-py38"] }

# Async runtime
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

# Logging
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }

[build-dependencies]
pyo3-build-config = "0.20"

[[example]]
name = "spike_async"
crate-type = ["cdylib"]

[[test]]
name = "async_integration"
harness = true
