[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "riptidecrawler"
version = "1.0.0"
description = "Python bindings for Riptide web scraping framework"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT OR Apache-2.0" }
keywords = ["web-scraping", "crawler", "spider", "extraction"]
authors = [
    { name = "Riptide Contributors" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/foofork/riptidecrawler"
Repository = "https://github.com/foofork/riptidecrawler"
Documentation = "https://github.com/foofork/riptidecrawler#readme"
Issues = "https://github.com/foofork/riptidecrawler/issues"

[tool.maturin]
features = []
module-name = "riptide"
python-source = "python"
