[package]
name = "riptide-reliability"
version = "0.9.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Riptide Team"]
description = "Reliability patterns for Riptide: circuit breakers, gates, and fault tolerance"

[dependencies]
# P2-F1 Day 3: Dependencies for modular architecture
riptide-types = { path = "../riptide-types" }
# NOTE: Circular dependency RESOLVED via trait abstraction (HtmlParser trait in riptide-types)
# riptide-fetch dependency is for HTTP client and circuit breaker functionality
riptide-fetch = { path = "../riptide-fetch" }
riptide-events = { path = "../riptide-events", optional = true }
riptide-monitoring = { path = "../riptide-monitoring", optional = true }
riptide-pool = { path = "../riptide-pool", optional = true }
riptide-utils = { path = "../riptide-utils" }

# Core dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# UUID for request tracking
uuid = { workspace = true }

# Specific dependencies for reliability patterns
chrono = { workspace = true }
url = "2.5"
dirs = "5.0"
async-trait.workspace = true

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.15"

[features]
# NOTE: reliability-patterns feature RE-ENABLED via trait abstraction
# Circular dependency resolved by using HtmlParser trait from riptide-types
# instead of concrete NativeHtmlParser type from riptide-extraction
# The trait is implemented by NativeHtmlParser, enabling dependency injection
reliability-patterns = []  # Now enabled - no dependencies needed (uses trait)
default = ["events", "monitoring", "reliability-patterns"]
# Enable event bus integration for circuit breaker notifications
events = ["riptide-events", "riptide-pool"]
# Enable monitoring integration for metrics
monitoring = ["riptide-monitoring"]
# Enable full integration with all optional features
full = ["events", "monitoring", "reliability-patterns"]
